# vsekai-godot-mcp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  REUSE.toml  SConstruct  THIRDPARTY.txt  mcp_command_buffer.gd.uid  mcp_protocol.gd  project.godot
.github/workflows/: gdextension-build.yaml  gdextension-release.yaml
addon/IDTXFlow/: plugin.cfg
addons/IDTXFlow/: idtxflow.gdextension.uid  plugin.cfg  plugin.gd  plugin.gd.uid
addons/godot_mcp/: README.md  mcp_bridge.gd  mcp_command_buffer.gd  mcp_commands.gd  mcp_commands.gd.uid  mcp_http_server.gd  mcp_protocol.gd  mcp_protocol.gd.uid  plugin.cfg
addons/vsekai_godot_mcp/: README.md  mcp_bridge.gd.uid  mcp_commands.gd  mcp_http_server.gd.uid  mcp_protocol.gd  mcp_runtime.gd  plugin.cfg
cmake/: lemonConfig.cmake
core/: idtx_core.sigs  stubgen_compat.h
core/src/: idtx_host_uri_resolver.cpp  idtx_scene.cpp
docs/: PLUGIN_ARCHITECTURE.md  STANDARD_OPERATING_PROCEDURES.md  engine_module_migration.md  references.bib
lemon/: CMakeLists.txt  core.h
lemon/bits/: windows.h
openusd-fabric/: .gitignore  INSTALL.md  LICENSE  pixi.toml
openusd-fabric/blender/: idtx_core_ctypes.py  idtx_core_export.py  post_export_hook.py  pre_export_mirror.py
openusd-fabric/hydra/HdVSekaiOutlineJFA/: CMakeLists.txt  outlineJFAPlugin.cpp  outlineJFATask.cpp  outlineJFATask.h  plugInfo.json
openusd-fabric/lean/: EmitArtifacts.lean  Fabric.lean  lake-manifest.json  lakefile.lean
openusd-fabric/maps/: humanoid_bones_map.json  scss_mtoon_map.json  springbone_fields_map.json
openusd-fabric/schema/: plugInfo.json  (+2 more)
scons/: download_utils.py  gdextension.py  generate_stubs.py  godot_scn_writers.py  godotcpp.py  idtxcli.py  idtxcore.py  idtxflow_ext.py  ixwebsocket.py  mdlsdk.py  openusd.py  openusdextension.py
source/: idtx_core_loader.cpp  idtx_core_loader.h  register_types.cpp
tests/: test_adversarial.gd  test_adversarial.gd.uid  test_command_buffer.gd  test_command_buffer.gd.uid  test_commands.gd  test_commands.gd.uid  test_http.gd  test_parity.gd  test_parity.gd.uid  test_protocol.gd
(+163 files in other folders)
